--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 base58==2.1.0
-lightgbm==3.1.1
+lightgbm
 numpy==1.19.5
 pandas==1.4.1
 pickleshare==0.7.5
-scikit-learn==1.0.2
-streamlit==1.4.0
+scikit-learn
+streamlit
