--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 base58==2.1.0
-lightgbm
-numpy
-pandas
-pickleshare
-scikit-learn
-streamlit
+lightgbm==3.1.1
+numpy==1.19.5
+pandas==1.3.0
+pickleshare==0.7.5
+scikit-learn==0.23.2
+streamlit==0.88.0
